<resources>
    <string name="app_name">NASA</string>

    <string name="photo_of_the_day_stub">Фото дня</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в Википедии</string>
    <string name="favourite">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="imageDesc">Картинка</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="two_days_ago">Two days ago</string>

    <string name="textSettings">Выберите тему:</string>
    <string name="textSetting1">Синяя</string>
    <string name="textSetting2">Зелёная</string>
    <string name="textSetting3">Красная</string>
    <string name="textButtonOk">OK</string>
    <string name="earth">Земля</string>
    <string name="mars">Марс</string>
    <string name="system">Солнечная система</string>

    <string name="constraint">Constraint</string>
    <string name="coordinator">Coordinator</string>
    <string name="spaceFlightHeader">Пилотируемый космический полёт</string>
    <string name="spaceFlightText">Путешествие человека в космос, на орбиту Земли и за её пределы, выполняемое с помощью пилотируемых космических аппаратов.
        Страны, способные проводить космические полёты на собственных космических кораблях, запускаемых собственными ракетами-носителями, иногда именуют космическими сверхдержавами.
        Способности выполнять пилотируемые космические полёты предшествует способность страны, как космической державы, выполнять запуски на собственных ракетах-носителях собственных спутников.
        Ввиду требования намного больших экономических и интеллектуальных затрат и ресурсов число космических сверхдержав намного меньше, чем космических держав.</string>
    <string name="spaceFlightCountries">Космические сверхдержавы</string>
    <string name="countrySovietUnion">СССР</string>
    <string name="countryRussia">Россия</string>
    <string name="countryUSA">США</string>
    <string name="countryChina">Китай</string>
    <string name="nameSovietUnion">Юрий Гагарин</string>
    <string name="nameUSA">Джон Гленн</string>
    <string name="nameChina">Ян Ливэй</string>

    <string name="large_text">
        1610 году Галилео Галилей и Симон Мариус независимо друг от друга открыли спутники Юпитера,
        что стало одним из важнейших научных событий того времени.
        Почти четыре века спустя запуск космического телескопа «Хаббл» положил начало новой революции в астрономии.
        Главная проблема оптической астрономии — неоднородность земной атмосферы.
        Области с разной плотностью, скоростью движения воздуха приводят к мерцанию звезд, видимому невооруженным глазом. Это делает космос единственным местом, где телескоп может получить действительно четкое и исчерпывающее представление о Вселенной.
        Телескоп «Хаббл», названный в честь Эдвина Хаббла, был запущен на орбиту 24 апреля 1990 года.
        Это совместный проект NASA и Европейского космического агентства,
        задуманный как обсерватория общего назначения для исследования Вселенной в видимом,
        ультрафиолетовом и инфракрасном диапазонах волн. Входит в число Больших обсерваторий NASA.
        20 мая 1990 года телескоп сделал первую фотографию звездного скопления NGC 3532.
        «Хаббл» вращается вокруг Земли на высоте около 540 км и наклонен на 28,5 градусов к экватору.
        Чтобы совершить один оборот, ему требуется 95 минут.
        Орбитальный телескоп провел более 1 млн наблюдений и предоставил данные, которые астрономы использовали,
        чтобы написать свыше 18 тыс. рецензируемых научных публикаций (от формирования планет до гигантских черных дыр).
        Эти документы упоминались в других публикациях более 900 тыс. раз.
        Благодаря изучению пульсирующих звезд удалось определить возраст нашей Вселенной — 13,8 млрд лет.
        В январе 1992 года астрономы подтвердили существование планет за пределами солнечной системы.
        Телескоп зафиксировал редкое явление — столкновение кометы Шумейкера-Леви 9 с Юпитером в 1994 году.
        Это первые в истории фотографии столкновения двух объектов Солнечной системы.
        Телескоп детально зафиксировал эволюцию погоды Юпитера, в том числе редкий шторм возле экватора планеты.
        «Хаббл» показал Плутон впервые с момента открытия планеты в 1930 году.
        Аппарат сфотографировал шлейф газа и пыли высотой 400 км в результате извержения вулкана Ио,
        самой большой внутренней луны Юпитера.
        Подтвердил предположения о наличии сверхмассивных черных дыр в ядрах Галактик.
        Нашел самый далекий из известных на сегодня космических объектов — галактику GN-z11.
        Сейчас мы видим ее такой, какой она была 13,4 млрд лет назад.
        Подтвердил существование на спутнике Юпитера Ганимеде огромного подземного океана под 150-километровой толщей льда.
        На основании этого открытия астрономы внесли крупнейший спутник в Солнечной системе в список возможных кандидатов на поиск жизненных форм.
        Обнаружил водяной пар на экзопланете K2-18b из обитаемой зоны, а также первую подтвержденную межзвездную комету 2I/Borisov.
        13 июня 2021 года компьютер, отвечающий за научное оборудование «Хаббла», перестал реагировать на команды с Земли.
        Устранить поломку инженерно-научной группе, обслуживающей телескоп, удалось только к 16 июля 2021 года.
        У орбитального «Хаббла» есть два аккаунта в Twitter — Hubble NASA и Hubble ESA, два официальных YouTube канала — NASA и ESA,
        а также аккаунты в Instagram и Facebook.
        Изображения и данные, полученные с космического телескопа «Хаббл», показывают галактики такими, какими они были миллиарды лет назад.
    </string>

    <string name="header">Список дел</string>
    <string name="event">Мероприятие</string>
    <string name="eventDescription">Описание мероприятия, участники, расписание и т.п. Описание мероприятия, участники, расписание и т.п.</string>
    <string name="note">Заметка</string>
    <string name="noteDescription">Содержание заметки Содержание заметки Содержание заметки Содержание заметки Содержание заметки</string>
</resources>